# image-displayer

./: .gitignore  CMakeLists.txt  README.md  actions.yml  imgui.ini
.github/workflows/: actions.yml
include/: imgui_stdlib.h
include/glad/: glad.h
lib/: glfw3.lib
shaders/: fragment.fs  vertex.vs
src/: current_dir.cpp  current_dir.hpp  gui.cpp  gui.hpp  image_player.cpp  image_player.hpp  imgui.h  imgui_internal.h  main.cpp  preferences.cpp  preferences.hpp  session.hpp  shader.cpp  shader.hpp  texture.hpp  user_input.hpp
src/shaders/: fragment.fs  vertex.vs
